# actix-actor-expect

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: test_actix_actor_expect.rs
