[package]
name = "actix-actor-expect"
version = "0.1.0"
edition = "2018"
authors = ["Ana Bujan <ana@eisberg-labs.com>"]
readme = "README.md"
repository = "https://github.com/eisberg-labs/actix-actor-expect"
description = "Utility for unit testing actix actors"
keywords = ["actix", "actor", "unit-testing"]
categories = ["development-tools::testing"]
license = "MIT/Apache-2.0"
include = ["src/", "LICENSE-*", "README.md"]

[lib]
name = "actix_actor_expect"
path = "src/lib.rs"

[dependencies]
actix = { version = "0.12.0", default-features = true }
